--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -24,8 +24,11 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "ioredis": "^5.2.3",
         "laravel-echo-server": "^1.6.3",
+        "socket.io": "^4.5.3",
         "vue": "^3.2.41"
     }
 }
