--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:C1Izgwv8e7eTnBSpMF4I5V+BsCGgxFRz8KHsH1Gp6jE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,11 +11,12 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=cms_thoviet
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=redis
+QUEUE_DRIVER = redis
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
@@ -27,6 +28,8 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_CLIENT=predis
+REDIS_PREFIX=""
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
@@ -50,3 +53,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# appId: c6947a6e7d2afbde
+# key: 6b3e9386f40d18f2527183e8ac53c1a4
