--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "ioredis": "^5.2.3",
+        "laravel-echo": "^1.14.1",
         "laravel-echo-server": "^1.6.3",
         "socket.io": "^4.5.3",
+        "socket.io-client": "^4.5.3",
         "vue": "^3.2.41"
     }
 }
